{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 134,
  "lineage": "feaccbcc-bf8c-537c-3acb-6136f46c2b06",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-00271c85bf8a52b84",
            "arn": "arn:aws:ec2:us-west-1:092601323290:instance/i-0c9b2ba8283e18b71",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c9b2ba8283e18b71",
            "instance_id": "i-0c9b2ba8283e18b71",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "key_name": "Knowhere-Test",
            "launch_time": "2025-10-21T13:52:48Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b909a462b9fd9e5d",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-29-60.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.60",
            "public_dns": "ec2-18-144-15-15.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.15.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088becd430f8e5381",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default",
              "ec2-rds-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1cbe67d4e8a1fad",
            "tags": {
              "Name": "Knowhere-Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00db88058f5db1270",
              "sg-03b31ddaaee81b777"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:092601323290:security-group/sg-00db88058f5db1270",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-00db88058f5db1270",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09f6daf4d60f2eb0b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:092601323290:vpc/vpc-09f6daf4d60f2eb0b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dae4167966a43e20",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b66b5caad266bae7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f6daf4d60f2eb0b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0291566d4a689a9a9",
            "owner_id": "092601323290"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:092601323290:security-group/sg-0c268f430e76974a8",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c268f430e76974a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00db88058f5db1270"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "knowhere-test-database-sg",
            "name_prefix": "",
            "owner_id": "092601323290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "knowhere-test-database-sg",
              "Owner": "knowhere-ai",
              "Project": "knowhere"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "knowhere-test-database-sg",
              "Owner": "knowhere-ai",
              "Project": "knowhere"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f6daf4d60f2eb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_server",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}